# Note2

./: .gitignore  CMakeLists.txt  README.md  plan.txt
docs/: README.md
examples/for_win/: for_win.sln
examples/for_win/Debug/: for_win.ilk
examples/for_win/for_win/: encoder.c  encoder.h  file.c  file.h  for_win.vcxproj  for_win.vcxproj.filters  main.c  utils.c  utils.h
examples/for_win/for_win/Debug/: vc141.idb
examples/for_win/for_win/Debug/for_win.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  for_win.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/: CMakeLists.txt  config.h  datetime.cpp  datetime.h  encoder.cpp  encoder.h  file.cpp  file.h  log.h  main.cpp  note.cpp  note.h  parser.cpp  parser.h  timesheet.cpp  timesheet.h
test/datetime_test/: CMakeLists.txt  main.cpp
test/dummy_test/: main.cpp
test/file_test/: main.cpp  testfile.txt
test/logger_test/: main.cpp
test/parser_test/: main.cpp
tests/: CMakeLists.txt  datetime_test.cpp  encoder_test.cpp  file_test.cpp  note_test.cpp  parser_test.cpp
tools/: check_ci.sh
win/build-note2-Desktop_Qt_5_11_2_MSVC2017_64bit3-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  test.txt  text1.txt  ui_mainwindow.h
win/build-note2-Desktop_Qt_5_11_2_MSVC2017_64bit3-Debug/debug/: note2.ilk
win/build-note2-Desktop_Qt_5_11_2_MSVC2017_64bit3-Release/: Makefile  Makefile.Debug  Makefile.Release
win/build-note2-Desktop_Qt_5_11_2_MSVC2017_64bit3-Release/release/: moc_mainwindow.cpp
win/build-note2-Desktop_Qt_5_12_0_MSVC2017_32bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
win/build-note2-Desktop_Qt_5_12_0_MSVC2017_32bit-Release/release/: moc_mainwindow.cpp
win/note2/: config.h  core.cpp  core.h  encoder.cpp  encoder.h  file.h  justfile.h  main.cpp  note.cpp  note.h  note2.pro  parser.cpp  utils.cpp  utils.h  with_calendar.ui
win/note2/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  treeitem.cpp  treeitem.h
win/note2/test/: encoding_test.cpp  encoding_test.h  file_test.cpp  file_test.h  interface_test.cpp  interface_test.h  main_test.cpp  main_test.h  utils_test.cpp  utils_test.h
